@@ -3,9 +3,10 @@ CHANGELOG.txt
 
 0.6.5
 - clean the empty program state
-- translation updates
 - media selection is now multiple
 - tags are displayed in the info area
+- first operational edit dialog to show media details
+- translation updates
 
 
 0.6.4
